# DroidSpice

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/devinrcohen/droidspice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/devinrcohen/droidspice/: AnalysisType.kt  MainActivity.kt  PlotDataHolder.kt  PlotFragment.kt  PlotUtils.kt  SimFragment.kt
app/src/main/res/drawable/: bg_plot_card.xml  bjt_npn_right_emitter_bottom.xml  bjt_pnp_right_emitter_top.xml  capacitor_horizontal.xml  capacitor_vertical.xml  ic_launcher_foreground.xml  inductor_horizontal.xml  inductor_vertical.xml  mosfet_n_right_source_bottom.xml  mosfet_p_right_source_bottom.xml  n_mosfet_bodydiode.xml  p_mosfet_bodydiode.xml  resistor_horizontal.xml  resistor_vertical.xml  vs_vertical.xml
app/src/main/res/layout/: activity_main.xml  fragment_plot.xml  fragment_sim.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors-night.xml  colors.xml  strings.xml  styles.xml  themes.xml  unit_arrays.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/test/java/com/devinrcohen/droidspice/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
